test/libsolidity/syntaxTests/constants/mapping_constant.sol
mapping(uint => uint) constant b = b;
// ----
// TypeError 9259: (0-36): Only constants of value type and byte array type are implemented.
